[gd_scene load_steps=11 format=3 uid="uid://d4mrsmq2c2uh6"]

[ext_resource type="Texture2D" uid="uid://xphe5qc1drba" path="res://assets/menu/tellos_de_2.png" id="1_g5td5"]
[ext_resource type="Script" uid="uid://dm6u5f7v8nr41" path="res://scripts/menu/main_menu.gd" id="1_umuct"]
[ext_resource type="Texture2D" uid="uid://w8sn0dvimf0t" path="res://assets/menu/logo editable.png" id="2_u0841"]
[ext_resource type="Texture2D" uid="uid://dr4hyhj2lbp7p" path="res://assets/menu/Captura de pantalla 2025-11-10 232600.png" id="3_usbuo"]
[ext_resource type="Texture2D" uid="uid://d4litqo2yjg1g" path="res://assets/menu/Captura de pantalla 2025-11-10 232739.png" id="4_dxnlo"]
[ext_resource type="Texture2D" uid="uid://bf0jmbl5slths" path="res://assets/menu/Captura de pantalla 2025-11-10 234227.png" id="5_u0841"]
[ext_resource type="Texture2D" uid="uid://dhgr74yv7spi1" path="res://assets/menu/Captura de pantalla 2025-11-10 234533.png" id="6_usbuo"]
[ext_resource type="Texture2D" uid="uid://3qdbccr4et6x" path="res://assets/menu/button pressed.png" id="7_dxnlo"]
[ext_resource type="Texture2D" uid="uid://dk7iwpn76gd12" path="res://assets/menu/Captura de pantalla 2025-11-11 001501.png" id="9_i601r"]
[ext_resource type="Texture2D" uid="uid://dsox5uejbbplh" path="res://assets/menu/Captura de pantalla 2025-11-11 001506.png" id="10_vqwgj"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_umuct")

[node name="Imagenes" type="Node" parent="."]

[node name="Fondo" type="TextureRect" parent="Imagenes"]
offset_right = 1926.0
offset_bottom = 1079.0
texture = ExtResource("1_g5td5")

[node name="Logo" type="TextureRect" parent="Imagenes"]
offset_left = 9.0
offset_top = 5.0
offset_right = 302.0
offset_bottom = 291.0
texture = ExtResource("2_u0841")
expand_mode = 1

[node name="PJ Nuevo" type="TextureRect" parent="Imagenes"]
offset_left = 1495.0
offset_top = 31.0
offset_right = 1920.0
offset_bottom = 326.0
texture = ExtResource("3_usbuo")

[node name="SkinPJ" type="TextureRect" parent="Imagenes"]
offset_left = 1405.0
offset_top = 371.0
offset_right = 1917.0
offset_bottom = 680.0
texture = ExtResource("4_dxnlo")

[node name="ColorRect" type="ColorRect" parent="Imagenes/SkinPJ"]
layout_mode = 0
offset_left = 332.0
offset_top = 240.0
offset_right = 479.0
offset_bottom = 285.0
color = Color(0.7647059, 0.79607844, 0.7529412, 1)

[node name="TimerLabel" type="Label" parent="Imagenes/SkinPJ"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 322.0
offset_top = 238.0
offset_right = 472.0
offset_bottom = 301.0
theme_override_font_sizes/font_size = 35

[node name="Gemas" type="TextureRect" parent="Imagenes"]
offset_left = 315.0
offset_top = 85.0
offset_right = 679.0
offset_bottom = 214.0
texture = ExtResource("5_u0841")

[node name="ColorRect" type="ColorRect" parent="Imagenes/Gemas"]
layout_mode = 0
offset_left = 109.0
offset_top = 20.0
offset_right = 256.0
offset_bottom = 109.0
color = Color(0.627451, 0.5686275, 0.5803922, 1)

[node name="GemasLabel" type="Label" parent="Imagenes/Gemas"]
layout_mode = 0
offset_left = 111.0
offset_top = 28.0
offset_right = 226.0
offset_bottom = 111.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "0"

[node name="TextureButton" type="TextureButton" parent="Imagenes/Gemas"]
layout_mode = 0
offset_left = 262.0
offset_top = 20.0
offset_right = 343.0
offset_bottom = 111.0
texture_normal = ExtResource("6_usbuo")
texture_pressed = ExtResource("7_dxnlo")
stretch_mode = 0

[node name="Misiones" type="TextureRect" parent="Imagenes"]
offset_left = 534.0
offset_top = 900.0
offset_right = 1231.0
offset_bottom = 1080.0
texture = ExtResource("9_i601r")

[node name="ColorRect" type="ColorRect" parent="Imagenes/Misiones"]
layout_mode = 0
offset_left = 27.0
offset_top = 77.0
offset_right = 672.0
offset_bottom = 159.0
color = Color(0.6627451, 0.61960787, 0.6627451, 1)

[node name="Label" type="Label" parent="Imagenes/Misiones"]
layout_mode = 0
offset_left = 130.0
offset_top = 79.0
offset_right = 540.0
offset_bottom = 155.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 55
text = "¡EN PROGRESO!"

[node name="Pase" type="TextureRect" parent="Imagenes"]
offset_left = 1346.0
offset_top = 903.0
offset_right = 1840.0
offset_bottom = 1075.0
texture = ExtResource("10_vqwgj")

[node name="ColorRect" type="ColorRect" parent="Imagenes/Pase"]
layout_mode = 0
offset_left = 26.0
offset_top = 30.0
offset_right = 334.0
offset_bottom = 134.0
color = Color(0.8117647, 0.7921569, 0.7921569, 1)

[node name="Label" type="Label" parent="Imagenes/Pase"]
layout_mode = 0
offset_left = 2.0
offset_top = 31.0
offset_right = 412.0
offset_bottom = 107.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "¡EN PROGRESO!"

[node name="Botones" type="Node" parent="."]

[node name="Jugar" type="Button" parent="Botones"]
modulate = Color(1, 0.24313726, 0.17254902, 1)
offset_left = 1.0
offset_top = 362.0
offset_right = 632.0
offset_bottom = 519.0
focus_mode = 0
theme_override_font_sizes/font_size = 80
text = "JUGAR"

[node name="Opciones" type="Button" parent="Botones"]
modulate = Color(1, 0.24313726, 0.17254902, 1)
offset_left = -2.0
offset_top = 540.0
offset_right = 307.0
offset_bottom = 631.0
theme_override_font_sizes/font_size = 60
text = "OPCIONES"

[node name="Tienda" type="Button" parent="Botones"]
modulate = Color(1, 0.24313726, 0.17254902, 1)
offset_left = 1.0
offset_top = 645.0
offset_right = 225.0
offset_bottom = 736.0
theme_override_font_sizes/font_size = 60
text = "TIENDA"

[node name="Controles" type="Button" parent="Botones"]
modulate = Color(1, 0.24313726, 0.17254902, 1)
offset_top = 752.0
offset_right = 359.0
offset_bottom = 843.0
theme_override_font_sizes/font_size = 60
text = "CONTROLES"

[node name="Salir" type="Button" parent="Botones"]
modulate = Color(1, 0.24313726, 0.17254902, 1)
offset_top = 866.0
offset_right = 170.0
offset_bottom = 957.0
theme_override_font_sizes/font_size = 60
text = "SALIR"
